# test-task-done

./: .env.sample  .gitignore  ADR.md  LEARNED.md  README.md  docker-compose-dev.yaml  prometheus.yml  pyproject.toml
docker/: Dockerfile
scripts/: create_schema.cql  create_schema_clickhouse.sql  init-clickhouse.sh  init-scylla.sh
src/: benchmark.py
src/app/: main.py
src/app/api/v1/: __init__.py  events.py  stats.py
src/app/broker/: base.py  nats.py
src/app/core/: config.py  logger.py  metrics.py  providers.py
src/app/db/: base.py  clickhouse.py
src/app/db/repositories/: stats_repo.py
src/app/middleware/: metrics_middleware.py
src/app/schemas/: events.py  stats.py
src/app/services/: events_service.py  stats_service.py
src/app/utils/: decorators.py
src/app/workers/: db_worker.py
src/cli/: import_events.py
src/tests/integration/: conftest.py  test_ingest_to_stats.py
src/tests/unit/: conftest.py  test_event_idempotency.py  test_indexing.py
