[project]
name = "test-task"
version = "0.1.0"
description = "Event Analytics service"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect==0.9.2",
    "litestar==2.18.0",
    "loguru==0.7.3",
    "msgspec==0.19.0",
    "nats-py==2.11.0",
    "pytest==8.4.2",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "scylla-driver==3.29.4",
    "prometheus-client==0.23.1",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]